tests/unit/default/syntax-error/170-alter-table-dot-column-to.e.t
---- IN ----
*%table.name:int=>
---- OUT ----
---- ERR ----
syntax: expected `:` after `...name:int=>` instead of EOL at position 18 - at line 1
---- EXIT ----
1
